--- a/CPAS/package.json
+++ b/CPAS/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.2",
+    "firebase": "^7.2.1",
     "moment": "^2.24.0",
     "ssf": "^0.10.2",
     "vue": "^2.5.2",
