--- a/CPAS/package.json
+++ b/CPAS/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cpas",
+  "name": "cpaf",
   "version": "1.0.0",
   "description": "capstone",
   "author": "BaoNQ",
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
+    "start0": "node server.js",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
@@ -19,15 +20,21 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.2",
+    "docx": "^5.0.0-rc7",
+    "file-saver": "^2.0.2",
     "firebase": "^7.2.1",
+    "html-docx-js": "^0.3.1",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "ssf": "^0.10.2",
     "vue": "^2.5.2",
+    "vue-google-oauth2": "^1.4.0",
     "vue-js-modal": "^1.3.31",
     "vue-loading-spinner": "^1.0.11",
     "vue-multiselect": "^2.1.6",
     "vue-notification": "^1.3.16",
     "vue-router": "^3.0.1",
+    "vue-sorted-table": "^1.1.1",
     "vue2-datepicker": "^2.13.0",
     "vuex": "^3.1.1",
     "xlsx": "^0.15.1"
